--- a/templates/index.html
+++ b/templates/index.html
@@ -395,7 +395,8 @@ h1,h2,h3,h4,h5,h6{
         <a href="{% url 'sproduct' %}"><button class="btn">PURCHASE NOW</button>
         <div class="content">
           <h2 style="color: honeydew;">DESIGN YOUR WEBSITE WITH US...</h2>
-          <p>This is a special product page were you can design how your website appeares.For that we provide lots of templates that you can choose as your wish.According to yourselection we design a completely responsive website attract your costomers.And the main heighlight that the pize starts from just 1000/-</p>
+          <p>This is a special product page were you can design how your website appeares.For that we provide lots of templates that you can choose as your wish.According to yourselection we design a completely responsive website attract your costomers.And the main heighlight that the pize starts from just 1000/-<br>
+		1.Guest Users can order this product<br>2.Enter the correct Quote amount. If any change detected we will not accept your quotes. Refund will not allowed</p>
         </div>
       </div>
     
