--- a/templates/product.html
+++ b/templates/product.html
@@ -1,4 +1,4 @@
-{% extends 'index.html' %}
+{% extends 'menu.html' %}
 {% block content %}
 <center>
 <div style="padding-top: 18%;" class="razorpay-embed-btn" data-url="https://pages.razorpay.com/pl_GX2Z8iWGcyZ27Z/view" data-text="Pay Now" data-color="#528FF0" data-size="large">
