--- a/templates/menu.html
+++ b/templates/menu.html
@@ -60,7 +60,7 @@ body {
   }
 }
 .dropdown {
-        float: right;
+        float: left;
         overflow: hidden;
         padding-right: 5%;
       }
