--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% extends 'menu.html' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -344,46 +344,6 @@ h1,h2,h3,h4,h5,h6{
 
 
 <body>
-    <section >
-        {% block topnav %}
-        <div class="topnav" id="nav">
-            <a class="active" href="{% url "home" %}">NSJ GROUP</a>
-            <a href="{% url "Aboutus" %}">Contact Us</a>
-           
-            <a href="{% url "index" %}">Shop</a>
-            <a href="{% url "Mainpayment" %}">Payments</a>
-        {% endblock %}
-        <form method="POST" action="{% url "searchbar" %}">
-          {% csrf_token %}
-            <input type="text" value="" name="searchbar"  placeholder="Search">
-        </form>
-          
-        {% if user.is_authenticated %}
-            <div class="dropdown">
-                <button class="dropbtn">{{user.username}} &#9660
-                    <i class= "fas fab-caret-down"></i>
-                </button>
-                <div class="dropdown-content">
-                        
-                        <a href="{% url "orders_view" user.id %}">Orders</a>
-                        <a href="{% url "addtocart_view" user.id %}">Your Cart</a>
-                        <a href="{% url "logout" %}">Logout</a>   
-                        <a href="{% url 'profile' user.id %}">Profile</a>    
-                </div>
-            </div>
-
-        {% else %}
-        <div class="auth"  align="right">
-            <a href="{% url "Login" %}">Login</a>
-            <a href="{% url "Register" %}">Register</a>
-        </div>
-        </div>    
-        
-        {% endif %}
-
-    </section>
-
-    <br>
  
     
     
