--- a/templates/menu.html
+++ b/templates/menu.html
@@ -136,10 +136,18 @@ body {
             </div>
 
         {% else %}
-        <div class="auth"  align="right">
-          <a href="{% url "Login" %}">sign in</a>
-        </div>
-        </div>    
+        <div class="dropdown">
+                <button class="dropbtn">{{user.username}} &#9660
+                    <i class= "fas fab-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                        
+                        <a href="{% url "login" %}">Login</a>
+                        <a href="{% url "Register" %}">Register </a>
+                          
+                </div>
+            </div>
+           
         
         {% endif %}
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
