--- a/templates/menu.html
+++ b/templates/menu.html
@@ -142,7 +142,7 @@ body {
                 </button>
                 <div class="dropdown-content">
                         
-                        <a href="{% url "login" %}">Login</a>
+                        <a href="{% url "Login" %}">Login</a>
                         <a href="{% url "Register" %}">Register </a>
                           
                 </div>
