--- a/templates/menu.html
+++ b/templates/menu.html
@@ -137,7 +137,7 @@ body {
 
         {% else %}
         <div class="dropdown">
-                <button class="dropbtn">{{user.username}} &#9660
+                <button class="dropbtn">User &#9660
                     <i class= "fas fab-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
