--- a/templates/login.html
+++ b/templates/login.html
@@ -12,97 +12,156 @@
 {% block content %}
 {% load static %}
 <style>
-       body{
-          margin:0;
-          padding:0;
-          background-color: #3C3C3C;
-          font-family: sans-serif;
-           }
-      .loginbox{  width: 500px;
-          height: 450px;
-          background: #242424;
-          color: #fff;
-          top:50%;
-          left:50%;
-          position:absolute;
-          transform: translate(-50%,-50%);
-          box-sizing: border-box;
-          padding: 70px 30px;
-          opacity:7;
-               }
-      .avatar{  width: 100px;
-          height: 100px;
-          border-radius:50%;
-          position:absolute;
-          top:-10%;
-          left:calc(50% - 50px);
-             }
-      h1{    margin:0;
-          padding: 0 0 20px;
-          text-align: center;
-          font-size: 30px;
-          font-family:AR JULIAN;
-          color:red;
-        }
-      .loginbox p{  margin:0;
-          padding: 0;
-          font-weight:bold;
-                 }
-      .loginbox input{width: 90%;
-          margin-bottom:20px;
-                     }
-      .loginbox input[type="text"], input[type="password"]{
-          border: none;
-          border-bottom: 1px solid #fff;
-          background: transparent;
-          outline:none;
-          height:40px;
-          color:#fff;
-          font-size:16px;
-              }
-      .loginbox input[type="submit"]{
-          border: none;
-          outline:none;
-          height:40px;
-          background:#fb2525;
-          color: #fff;
-          font-size:18px;
-          border-radius:20px;
-              }
-      .loginbox input[type="submit"]:hover
-      {    cursor:pointer;
-          background:#ffc107;
-          color:#000;
+          <style>
+    .body{
+        background-color: #4D4D4D;
+    }
+    .card {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        max-width: 300px;
+        margin: auto;
+        text-align: center;
+        font-family: arial;
       }
-      .loginbox a{
-          text-decoration:none;
-          font-size:12px;
-          line-height:20px;
-          color: darkgrey;
+      
+      .price {
+        color: grey;
+        font-size: 22px;
       }
-      .loginbox a:hover
-      {
-        color:#ffc107;
+      
+      .card button {
+        border: none;
+        outline: 0;
+        padding: 12px;
+        color: white;
+        background-color: #000;
+        text-align: center;
+        cursor: pointer;
+        width: 100%;
+        font-size: 18px;
       }
-      .active{
-        color:#fff;
-        background:#e02626;
-        border-radius:4px;
+      
+      .card button:hover {
+        opacity: 0.7;
       }
-   
+      .form-style-5{
+	max-width: 500px;
+	padding: 10px 20px;
+	background: #f4f7f8;
+	margin: 10px auto;
+	padding: 20px;
+	background: #f4f7f8;
+	border-radius: 8px;
+	font-family: Georgia, "Times New Roman", Times, serif;
+}
+.form-style-5 fieldset{
+	border: none;
+}
+.form-style-5 legend {
+	font-size: 1.4em;
+	margin-bottom: 10px;
+}
+.form-style-5 label {
+	display: block;
+	margin-bottom: 8px;
+}
+.form-style-5 input[type="text"],
+.form-style-5 input[type="date"],
+.form-style-5 input[type="datetime"],
+.form-style-5 input[type="email"],
+.form-style-5 input[type="number"],
+.form-style-5 input[type="search"],
+.form-style-5 input[type="time"],
+.form-style-5 input[type="url"],
+.form-style-5 textarea,
+.form-style-5 select {
+	font-family: Georgia, "Times New Roman", Times, serif;
+	background: rgba(255,255,255,.1);
+	border: none;
+	border-radius: 4px;
+	font-size: 15px;
+	margin: 0;
+	outline: 0;
+	padding: 10px;
+	width: 100%;
+	box-sizing: border-box; 
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box; 
+	background-color: #e8eeef;
+	color:#8a97a0;
+	-webkit-box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
+	box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
+	margin-bottom: 30px;
+}
+.form-style-5 input[type="text"]:focus,
+.form-style-5 input[type="date"]:focus,
+.form-style-5 input[type="datetime"]:focus,
+.form-style-5 input[type="email"]:focus,
+.form-style-5 input[type="number"]:focus,
+.form-style-5 input[type="search"]:focus,
+.form-style-5 input[type="time"]:focus,
+.form-style-5 input[type="url"]:focus,
+.form-style-5 textarea:focus,
+.form-style-5 select:focus{
+	background: #d2d9dd;
+}
+.form-style-5 select{
+	-webkit-appearance: menulist-button;
+	height:35px;
+}
+.form-style-5 .number {
+	background: #1abc9c;
+	color: #fff;
+	height: 30px;
+	width: 30px;
+	display: inline-block;
+	font-size: 0.8em;
+	margin-right: 4px;
+	line-height: 30px;
+	text-align: center;
+	text-shadow: 0 1px 0 rgba(255,255,255,0.2);
+	border-radius: 15px 15px 15px 0px;
+}
 
+.form-style-5 input[type="submit"],
+.form-style-5 input[type="button"]
+{
+	position: relative;
+	display: block;
+	padding: 19px 39px 18px 39px;
+	color: #FFF;
+	margin: 0 auto;
+	background: #1abc9c;
+	font-size: 18px;
+	text-align: center;
+	font-style: normal;
+	width: 100%;
+	border: 1px solid #16a085;
+	border-width: 1px 1px 3px;
+	margin-bottom: 10px;
+}
+.form-style-5 input[type="submit"]:hover,
+.form-style-5 input[type="button"]:hover
+{
+	background: #109177;
+}
+      </style>
 </style>
 
     <body>
-    <center>
-        <div class="loginbox">
-        <h1>Login</h1>
+       <div class="form-style-5" style="display: inline-block;">
+
         <form action="{% url "Login" %}" method="POST">
 
             
             {% csrf_token %}
-            Enter your username : <input type="text" value="" name="username"><br><br>
-            Enter your password : <input type="password" value="" name="password"><br><br>
+           <fieldset>
+        <legend><span class="number">1</span> Your Details</legend>
+        <input required type="text" name="username" placeholder="Username :">
+        <input required type="email" name="password" placeholder="Your Password *">
+        <div>
+         </div>
+        </fieldset>
             <input type="submit" value="Login" name="LoginAccount">
         </form>
             <br>
