--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
 {% load static %}
 <style>
           <style>
-    .body{
+        .body{
         background-color: #4D4D4D;
     }
     .card {
@@ -73,6 +73,7 @@
 .form-style-5 input[type="search"],
 .form-style-5 input[type="time"],
 .form-style-5 input[type="url"],
+.form-style-5 input[type="password"],
 .form-style-5 textarea,
 .form-style-5 select {
 	font-family: Georgia, "Times New Roman", Times, serif;
@@ -101,6 +102,7 @@
 .form-style-5 input[type="search"]:focus,
 .form-style-5 input[type="time"]:focus,
 .form-style-5 input[type="url"]:focus,
+.form-style-5 input[type="password"]:focus,
 .form-style-5 textarea:focus,
 .form-style-5 select:focus{
 	background: #d2d9dd;
