--- a/templates/login.html
+++ b/templates/login.html
@@ -161,7 +161,7 @@
            <fieldset>
         <legend><span class="number">1</span> Your Details</legend>
         <input required type="text" name="username" placeholder="Username :">
-        <input required type="email" name="password" placeholder="Your Password *">
+        <input required type="password" name="password" placeholder="Your Password *">
         <div>
          </div>
 		               <input type="submit" value="Login" name="LoginAccount">
