--- a/templates/register.html
+++ b/templates/register.html
@@ -154,7 +154,7 @@
                 <fieldset>
         <legend><span class="number">1</span> Personal Details Details</legend>
         <input required type="text" name="Candidate_Name" placeholder="Username :">
-        <input required type="email" name="email" placeholder="Your Email *">
+        <input required type="email" name="Candidate_Emailid" placeholder="Your Email *">
         <p>Male</p><input required type="radio" name="Candidate_Gender" placeholder="Gender *" value="Male">
         <p>Female</p><input required type="radio" name="Candidate_Gender" placeholder="Gender *" value="Female">
         <p>Other</p><input required type="radio" name="Candidate_Gender" placeholder="Gender *" value="Others">
